# cluv

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yaml  objects.inv  partiton-stats_output.txt  pyproject.toml
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  launch_actions_runner.sh
.github/ISSUE_TEMPLATE/: bug_report.md  doc_report.md  feature_proposal.md
.github/workflows/: build.yaml  docs.yaml  publish.yaml
cluv/: __init__.py  __main__.py  alliance_status.py  cache.py  config.py  history.py  job.py  remote.py  slurm.py  ssh.py  tui.py  utils.py
cluv/cli/: __init__.py  build.py  clean.py  dashboard.py  disable.py  estimate.py  history.py  init.py  jobs.py  login.py  run.py  slurm.py  smart_submit.py  status.py  submit.py  sync.py
cluv/cli/submit_utils/: chunking.py  first.py
cluv/dev/: merge.py  sacct_cluster.py
commands/: index.html
docs/: commands.md  hydra-launcher.md  index.md
docs/guides/: cleaning-runs.md  hydra-launcher.md  introduction.md  submit-config.md  syncing-datasets.md
docs/reference/: cli.md  cluv.md  config.md  remote.md
docs/reference/cli/: init.md  login.md  run.md  status.md  submit.md  sync.md
docs/stylesheets/: extra.css
examples/checkpointing/: README.md  pyproject.toml
examples/checkpointing/scripts/: job.sh
examples/checkpointing/src/checkpointing/: __init__.py  main.py
examples/hydra_example/: README.md  _launch.py  logs  main.py  pyproject.toml  sweep.py  sweep.yaml
examples/hydra_example/configs/: config.yaml
examples/hydra_example/configs/hydra/: default.yaml
examples/hydra_example/configs/launcher/: cluv.yaml  mila.yaml  remote_mila.yaml  submitit.yaml
examples/hydra_example/scripts/: job.sh  safe_job.sh
examples/imagenet/: main.py  pyproject.toml
examples/imagenet/scripts/: job.sh  safe_job.sh
examples/jax-simple/: README.md  pyproject.toml
examples/jax-simple/scripts/: job.sh
examples/jax-simple/src/jax_simple/: __init__.py
examples/pytorch-example/: README.md  main.py  pyproject.toml
examples/pytorch-example/scripts/: job.sh
examples/pytorch-example/src/pytorch_example/: main.py
examples/pytorch-setup/: README.md  pyproject.toml
examples/pytorch-setup/scripts/: job.sh
examples/pytorch-setup/src/pytorch_setup/: __init__.py  main.py
examples/simple-checkpoint/: pyproject.toml
examples/simple-checkpoint/scripts/: job.sh
examples/simple-checkpoint/src/simple_checkpoint/: __init__.py  main.py  main_signal.py
guides/cleaning-runs/: index.html
guides/introduction/: index.html
guides/submit-config/: index.html
guides/syncing-datasets/: index.html
hydra-launcher/: index.html
hydra_plugins/cluv/: __init__.py  cluv_launcher.py  cluv_sweeper.py  remote_launcher_plugin.py
hydra_plugins/remote_launcher/: __init__.py  remote_launcher_plugin.py
reference/cli/: index.html
reference/cli/init/: index.html
reference/cli/login/: index.html
reference/cli/run/: index.html
reference/cli/status/: index.html
reference/cli/submit/: index.html
reference/cli/sync/: index.html
reference/config/: index.html
reference/remote/: index.html
scripts/: container_job.sh  integration_job.sh  job.sh  safe_job.sh
search/: search_index.json
skills/cluv/: SKILL.md
src/cluv/: __main__.py  config.py
src/cluv/cli/: init.py  run.py
tests/: conftest.py  example.py  test_build.py  test_cache.py  test_chunking.py  test_clean.py  test_config.py  test_disable.py  test_examples.py  test_history.py  test_hydra_plugin.py  test_init.py  test_integration.py  test_remote.py  test_slurm.py  test_ssh.py  test_submit.py  test_submit_retry.py  test_sync.py  test_sync_cache.py  test_sync_refs.py  test_sync_unit.py  test_tui.py  utils.py
tests/data/: dataset.txt
