[project]
name = "cluv"
description = "cluv (from 'cluster' + 'uv') - A versatile tool to work with uv python projects across HPC clusters."
readme = "README.md"
authors = [{ name = "Fabrice Normandin", email = "normandf@mila.quebec" }]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "milatools>=0.1.9",
    "pydantic>=2.0",
    "rich>=13.0",
    "rich-argparse>=1.7.2",
    "simple-parsing>=0.1.8",
]

[project.scripts]
cluv = "cluv.__main__:main"


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "uv-dynamic-versioning>=0.2.0",
    "mkdocs<2.0.0",
    "mkdocs-material>=9.5.44",
    "mkdocstrings[python]>=0.27.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.1",
    "ruff",
    "pytest-skip-slow>=0.0.5",
    "torchvision>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["cluv", "tests"]
norecursedirs = [".venv"]
addopts = ["--doctest-modules"]
asyncio_mode = "auto"
markers = [
    "integration: requires live SSH connections to real clusters (deselect with '-m not integration')",
]

[tool.uv]
managed = true

[tool.uv.workspace]
members = [
    "examples/pytorch-setup",
]


[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"

[tool.ruff]
line-length = 99

[tool.docformatter]
wrap-summaries = 99
wrap-descriptions = 99

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cluv"]

[tool.hatch.build.targets.wheel.force-include]
"scripts" = "cluv/templates/scripts"
"pyproject.toml" = "cluv/templates/pyproject.toml"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.coverage.run]
source = ["cluv"]

[tool.coverage.report]
show_missing = true

[tool.cluv]
# Where to store results on all clusters. TODO: Can be overridden in each cluster's config.
results_path = "logs"

# Which cluster to get the data from. When unset, assumes the current cluster is the source.
data_source_cluster = "mila"
# Where to read the data from on the source cluster.
data_source_path = "/network/datasets/cifar10"

# Where the dataset should be replicated on all clusters.
# On the source cluster (ex Mila), the folder could contain symlinks, to avoid duplicating the data.
datasets_path = "$SCRATCH/data/cifar10"

[tool.cluv.env]
# Environment variables applied when using Slurm commands on all clusters.
SBATCH_TIME = "3:00:00"
SBATCH_REQUEUE = "1"

[tool.cluv.clusters.mila]
env = {UV_OFFLINE="0", WANDB_MODE="online"}
datasets_path = "$SCRATCH/data/cifar10"

# PAICE clusters.
[tool.cluv.clusters.tamia]
env = {UV_OFFLINE="1", WANDB_MODE="offline"}
datasets_path = "$SCRATCH/data/cifar10"

[tool.cluv.clusters.killarney]
env = {UV_OFFLINE="1", WANDB_MODE="offline"}
datasets_path = "$SCRATCH/data/cifar10"

[tool.cluv.clusters.vulcan]
env = {UV_OFFLINE="1", WANDB_MODE="offline"}
datasets_path = "$SCRATCH/data/cifar10"

# DRAC clusters.
[tool.cluv.clusters.rorqual]
env = {UV_OFFLINE="1", WANDB_MODE="offline", SBATCH_ACCOUNT="rrg-bengioy-ad"}
datasets_path = "$SCRATCH/data/cifar10"

[tool.cluv.clusters.fir]
env = {UV_OFFLINE="0", WANDB_MODE="online", SBATCH_ACCOUNT="rrg-bengioy-ad"}
datasets_path = "$SCRATCH/data/cifar10"

[tool.cluv.clusters.nibi]
env = {UV_OFFLINE="0", WANDB_MODE="online", SBATCH_ACCOUNT="rrg-bengioy-ad"}
datasets_path = "$SCRATCH/data/cifar10"

[tool.cluv.clusters.trillium]
env = {UV_OFFLINE="1", WANDB_MODE="offline", SBATCH_ACCOUNT="rrg-bengioy-ad"}
datasets_path = "$SCRATCH/data/cifar10"

[tool.cluv.clusters.trillium-gpu]
env = {UV_OFFLINE="1", WANDB_MODE="offline", SBATCH_ACCOUNT="rrg-bengioy-ad"}
datasets_path = "$SCRATCH/data/cifar10"

[tool.cluv.clusters.narval]
# Mila doesn't have an allocation on Narval anymore.
# You can also use "def-yourusername" (the default partitions).
env = {UV_OFFLINE="1", WANDB_MODE="offline", SBATCH_ACCOUNT="def-bengioy"}
datasets_path = "$SCRATCH/data/cifar10"
