[project]
name = "cluv"
description = "cluv (from 'cluster' + 'uv') - A versatile tool to work with uv python projects across HPC clusters."
readme = "README.md"
authors = [{ name = "Fabrice Normandin", email = "normandf@mila.quebec" }]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "milatools>=0.1.9",
    "pydantic>=2.0",
    "rich>=13.0",
    "rich-argparse>=1.7.2",
    "simple-parsing>=0.1.8",
]

[project.scripts]
cluv = "cluv.__main__:main"


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "uv-dynamic-versioning>=0.2.0",
    "mkdocs<2.0.0",
    "mkdocs-material>=9.5.44",
    "mkdocstrings[python]>=0.27.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.1",
    "ruff",
    "pytest-skip-slow>=0.0.5",
]

[tool.pytest.ini_options]
testpaths = ["cluv", "tests"]
norecursedirs = [".venv"]
addopts = ["--doctest-modules"]
asyncio_mode = "auto"
markers = [
    "integration: requires live SSH connections to real clusters (deselect with '-m not integration')",
]

[tool.uv]
managed = true

[tool.uv.workspace]
members = [
    "examples/pytorch-example",
]


[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"

[tool.ruff]
line-length = 99

[tool.docformatter]
wrap-summaries = 99
wrap-descriptions = 99

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cluv"]

[tool.hatch.build.targets.wheel.force-include]
"scripts" = "cluv/templates/scripts"
"pyproject.toml" = "cluv/templates/pyproject.toml"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.coverage.run]
source = ["cluv"]

[tool.coverage.report]
show_missing = true

###  --------------   CLUV CONFIG   --------------  ###

[tool.cluv]
# Where to store job results by default. Can be overridden per cluster.
results_path = "$SCRATCH/logs/cluv"
# On clusters, Cluv creates a symlink (a shortcut) in your project folder to the results_path dir.
# This makes it easier to keep your project in $HOME and to see the results which are on $SCRATCH.
results_symlink = "logs"
## Where to read the data from when synchronizing data to all clusters.
#data_source = "mila:/network/datasets/cifar10.var/cifar10_torchvision"
## Where the dataset should be replicated on all clusters.
## TODO?: On the source cluster (ex Mila), the folder will only contain symlinks, to avoid
## duplicating the data.
#datasets_path = "$SCRATCH/datasets/cifar10"

[tool.cluv.env]
# Environment variables applied when using Slurm commands on all clusters.
SBATCH_TIMELIMIT = "3:00:00"
SBATCH_REQUEUE = "1"
# Assume that compute nodes don't have internet access by default. Override below when they do.
UV_OFFLINE="1"
WANDB_MODE="offline"


###  --------------   Clusters Config   --------------  ###

[tool.cluv.clusters.mila]
# Overrides specific to the Mila cluster.
env = {UV_OFFLINE="0", WANDB_MODE="online"}

[tool.cluv.clusters.tamia]

[tool.cluv.clusters.killarney]
# For example, you might not have a $SCRATCH on Killarney. This can be overwritten here.
results_path = "$HOME/logs/cluv"
# datasets_path = "$HOME/datasets/cifar10"

[tool.cluv.clusters.vulcan]

[tool.cluv.clusters.rorqual]
env = {SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.fir]
env = {UV_OFFLINE="0", WANDB_MODE="online", SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.nibi]
env = {UV_OFFLINE="0", WANDB_MODE="online", SBATCH_ACCOUNT="def-normandf", SBATCH_TIMELIMIT="0:05:00", SBATCH_MEM_PER_NODE="6G"}

[tool.cluv.clusters.trillium]
env = {SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.trillium-gpu]
env = {SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.narval]
# Mila doesn't have an allocation on Narval anymore.
env = {SBATCH_ACCOUNT="def-bengioy"}
