[project]
name = "cluv"
description = "cluv (from 'cluster' + 'uv') - A versatile tool to work with uv python projects across HPC clusters."
readme = "README.md"
authors = [{ name = "Fabrice Normandin", email = "normandf@mila.quebec" }]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "milatools>=0.1.9",
    "platformdirs>=4.9.6",
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
    "rich>=13.0",
    "rich-argparse>=1.7.2",
    "simple-parsing>=0.1.8",
]

[project.scripts]
cluv = "cluv.__main__:main"

[project.optional-dependencies]
hydra = [
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "hydra-zen>=0.16.0",
    "remote-slurm-executor",
]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "uv-dynamic-versioning>=0.2.0",
    "mkdocs<2.0.0",
    "mkdocs-material>=9.5.44",
    "mkdocstrings[python]>=0.27.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.1",
    "ruff",
    "pytest-skip-slow>=0.0.5",
    "torchvision>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["cluv", "tests"]
norecursedirs = [".venv"]
addopts = ["--doctest-modules"]
asyncio_mode = "auto"
markers = [
    "integration: requires live SSH connections to real clusters (deselect with '-m not integration')",
]

[tool.uv]
managed = true

[tool.uv.workspace]
members = [
    "examples/pytorch-example",
    "examples/hydra_example",
]

[tool.uv.sources]
remote-slurm-executor = { git = "https://www.github.com/lebrice/remote-slurm-executor" }


[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"

[tool.ruff]
line-length = 99

[tool.docformatter]
wrap-summaries = 99
wrap-descriptions = 99

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cluv", "hydra_plugins.cluv", "hydra_plugins.remote_launcher"]

[tool.hatch.build.targets.wheel.force-include]
"scripts" = "cluv/templates/scripts"
"pyproject.toml" = "cluv/templates/pyproject.toml"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.coverage.run]
source = ["cluv"]

[tool.coverage.report]
show_missing = true

###  --------------   CLUV CONFIG   --------------  ###

[tool.cluv]

# Job script to use by default when one isn't passed to the `submit` command, on all clusters.
# Can be overridden per cluster below. or per job submission.
job_script_path = "scripts/job.sh"
# Where to store job results by default. Can be overridden per cluster.
results_path = "$SCRATCH/logs/cluv"
# On clusters, Cluv creates a symlink (a shortcut) in your project folder to the results_path dir.
# This makes it easier to keep your project in $HOME and to see the results which are on $SCRATCH.
results_symlink = "logs"
# The path where the project should be replicated on remote clusters.
project_dir = "$HOME/repos/cluv"

## Where to read the data from when synchronizing data to all clusters.
#data_source = "mila:/network/datasets/cifar10.var/cifar10_torchvision"
## Where the dataset should be replicated on all clusters.
#datasets_path = "$SCRATCH/datasets/cifar10"

[tool.cluv.env]
# Environment variables applied when using Slurm commands on all clusters.
# Assume that compute nodes don't have internet access by default. Override below when they do.
UV_OFFLINE="1"
WANDB_MODE="offline"

[tool.cluv.sbatch_args]
# sbatch flags applied on all clusters. CLI-supplied flags take precedence.
time = "3:00:00"
requeue = true


###  --------------   Clusters Config   --------------  ###

[tool.cluv.clusters.mila]
# Overrides specific to the Mila cluster.
env = {UV_OFFLINE="0", WANDB_MODE="online"}

[tool.cluv.clusters.tamia]

[tool.cluv.clusters.killarney]
# For example, you might not have a $SCRATCH on Killarney. This can be overwritten here.
results_path = "$HOME/logs/cluv"
# datasets_path = "$HOME/datasets/cifar10"

[tool.cluv.clusters.vulcan]

[tool.cluv.clusters.rorqual]
sbatch_args = {account="rrg-bengioy-ad"}

[tool.cluv.clusters.fir]
env = {UV_OFFLINE="0", WANDB_MODE="online"}
sbatch_args = {account="rrg-bengioy-ad"}

[tool.cluv.clusters.nibi]
env = {UV_OFFLINE="0", WANDB_MODE="online"}
sbatch_args = {account="rrg-bengioy-ad"}

[tool.cluv.clusters.trillium]
sbatch_args = {account="rrg-bengioy-ad"}

[tool.cluv.clusters.trillium-gpu]
sbatch_args = {account="rrg-bengioy-ad"}

[tool.cluv.clusters.narval]
# Mila doesn't have an allocation on Narval anymore.
sbatch_args = {account="def-bengioy"}
