[project]
name = "hydra-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Fabrice Normandin", email = "normandf@mila.quebec" }]
requires-python = ">=3.13"
dependencies = [
    "cluv[dev,hydra]",
    "hydra-colorlog>=1.2.0",
    "numpy>=2.4.4",
    "torch>=2.7.0,<2.11.0",
    "torchvision>=0.25.0",
    "wandb>=0.27.0",
]

[tool.uv.sources]
remote-slurm-executor = { git = "https://www.github.com/lebrice/remote-slurm-executor" }
cluv = { workspace = true }

###  --------------   CLUV CONFIG   --------------  ###

[tool.cluv]
# Where to store job results by default.
results_path = "$SCRATCH/logs/hydra_example"
# On clusters, Cluv creates a symlink (a shortcut) in your project folder to the results_path dir.
# This makes it easier to keep your project in $HOME and to see the results which are on $SCRATCH.
results_symlink = "logs"
# Where to read the data from when synchronizing data to all clusters.
data_source = "mila:/network/datasets/cifar10.var/cifar10_torchvision"
# Where the dataset should be replicated on all clusters.
datasets_path = "$SCRATCH/datasets/cifar10"

[tool.cluv.env]
# Assume that compute nodes don't have internet access by default. Override below when they do.
UV_OFFLINE = "1"
WANDB_MODE = "offline"

[tool.cluv.sbatch_args]
# Environment variables applied when using Slurm commands on all clusters.
time = "3:00:00"
requeue = true

[tool.cluv.local]
## Settings (environment variables) applied when using cluv on a local machine (not on a Slurm cluster).
# Fake "$SCRATCH" directory to use when not on a Slurm cluster.
# (this makes the examples runnable either from a laptop or from a Slurm cluster.
env = { SCRATCH = "$HOME/scratch" }

###  --------------   Clusters Config   --------------  ###

[tool.cluv.clusters.mila]
# Overrides specific to the Mila cluster.
env = { UV_OFFLINE = "0", WANDB_MODE = "online" }
results_path = "$SCRATCH/logs/hydra_example"

[tool.cluv.clusters.tamia]

[tool.cluv.clusters.killarney]
# For example, you might not have a $SCRATCH on Killarney. This can be overwritten here.
datasets_path = "$HOME/datasets/cifar10"
results_path = "$HOME/logs/hydra_example"

[tool.cluv.clusters.vulcan]

[tool.cluv.clusters.rorqual]
[tool.cluv.clusters.rorqual.sbatch_args]
account = "rrg-bengioy-ad"

[tool.cluv.clusters.fir]
env = { UV_OFFLINE = "0", WANDB_MODE = "online" }

[tool.cluv.clusters.nibi]
env = { UV_OFFLINE = "0", WANDB_MODE = "online" }
[tool.cluv.clusters.nibi.sbatch_args]
account = "rrg-bengioy-ad"

[tool.cluv.clusters.trillium.sbatch_args]
account = "rrg-bengioy-ad"

[tool.cluv.clusters.trillium-gpu.sbatch_args]
account = "rrg-bengioy-ad"

[tool.cluv.clusters.narval.sbatch_args]
# Mila doesn't have an allocation on Narval anymore.
account = "def-bengioy"
