[project]
name = "pytorch-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cluv",
    "numpy>=2.4.4",
    "torch>=2.7.0,<2.11.0",
    "torchvision>=0.25.0",
    "wandb>=0.27.0",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.uv.sources]
cluv = { workspace = true }


###  --------------   CLUV CONFIG   --------------  ###

[tool.cluv]
# Where to store job results by default.
results_path = "$SCRATCH/logs/pytorch_example"
# On clusters, Cluv creates a symlink (a shortcut) in your project folder to the results_path dir.
# This makes it easier to keep your project in $HOME and to see the results which are on $SCRATCH.
results_symlink = "logs"
# Where to read the data from when synchronizing data to all clusters.
data_source = "mila:/network/datasets/cifar10.var/cifar10_torchvision"
# Where the dataset should be replicated on all clusters.
# TODO?: On the source cluster (ex Mila), the folder will only contain symlinks, to avoid
# duplicating the data.
datasets_path = "$SCRATCH/datasets/cifar10"

[tool.cluv.env]
# Environment variables applied when using Slurm commands on all clusters.
SBATCH_TIME = "3:00:00"
SBATCH_REQUEUE = "1"
# Assume that compute nodes don't have internet access by default. Override below when they do.
UV_OFFLINE="1"
WANDB_MODE="offline"
SBATCH_MEM_PER_NODE="16G"

###  --------------   Clusters Config   --------------  ###

[tool.cluv.clusters.mila]
# Overrides specific to the Mila cluster.
env = {UV_OFFLINE="0", WANDB_MODE="online"}
results_path = "$SCRATCH/logs/cluv"

[tool.cluv.clusters.tamia]

[tool.cluv.clusters.killarney]
# For example, you might not have a $SCRATCH on Killarney. This can be overwritten here.
datasets_path = "$HOME/datasets/cifar10"
results_path = "$HOME/logs/cluv"

[tool.cluv.clusters.vulcan]

[tool.cluv.clusters.rorqual]
env = {SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.fir]
env = {UV_OFFLINE="0", WANDB_MODE="online", SBATCH_ACCOUNT="def-bengioy"}

[tool.cluv.clusters.nibi]
env = {UV_OFFLINE="0", WANDB_MODE="online", SBATCH_ACCOUNT="def-bengioy"}

# TODO: There are issues with the job output script being created in $HOME. Once #87 is implemented,
# uncomment these to also submit on Trillium and Trillium-gpu.
# See also: #61
# [tool.cluv.clusters.trillium]
# env = {SBATCH_TIMELIMIT="00:15:00", SBATCH_OUTPUT="/scratch/normandf/logs/pytorch-example/trillium_%j/slurm-%j.out"}

# [tool.cluv.clusters.trillium-gpu]
# env = {SBATCH_GPUS_PER_NODE="1", SBATCH_OUTPUT="/scratch/normandf/logs/pytorch-example/trillium_%j/slurm-%j.out"}

[tool.cluv.clusters.narval]
# Mila doesn't have an allocation on Narval anymore.
env = {SBATCH_ACCOUNT="def-bengioy"}
