[project]
name = "pytorch-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "torch>=2.7.0,<2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.cluv]
results_path = "logs"

[tool.cluv.env]
# Environment variables applied when using Slurm commands on all clusters.
SBATCH_TIME = "3:00:00"
SBATCH_REQUE = true

[tool.cluv.clusters.mila]
env = {UV_OFFLINE=0, WANDB_MODE="online"}

# PAICE clusters.
[tool.cluv.clusters.tamia]
env = {UV_OFFLINE=1, WANDB_MODE="offline"}

[tool.cluv.clusters.killarney]
# submit_from_scratch = true # TODO: Need to do cd $SCRATCH sbatch --chdir $HOME/<project_path>
env = {UV_OFFLINE=1, WANDB_MODE="offline"}

[tool.cluv.clusters.vulcan]
env = {UV_OFFLINE=1, WANDB_MODE="offline"}

# DRAC clusters.
[tool.cluv.clusters.rorqual]
env = {UV_OFFLINE=1, WANDB_MODE="offline", SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.fir]
env = {UV_OFFLINE=0, WANDB_MODE="online", SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.nibi]
env = {UV_OFFLINE=0, WANDB_MODE="online", SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.trillium]
env = {UV_OFFLINE=1, WANDB_MODE="offline", SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.trillium-gpu]
env = {UV_OFFLINE=1, WANDB_MODE="offline", SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.narval]
# Mila doesn't have an allocation on Narval anymore.
# You can also use "def-yourusername" (the default partitions).
env = {UV_OFFLINE=1, WANDB_MODE="offline", SBATCH_ACCOUNT="def-bengioy"}
